src/ludivine/assets/client.css
/* ... */
#root {
    display: flex;
    flex: 1;
    flex-direction: column;
    background: inherit;
}
main {
    display: flex;
    position: relative;
    width: 100%;
    flex: 1;
    flex-direction: column;
}
main.dialog {
    max-width: 1000px;
    margin-top: 50px;
    justify-content: start;
}

@media screen and (max-width: 960px) {
    main {
        padding: 0;
        & > .tabbar { padding: 0 16px; }
    }

    main.dialog { margin-top: 0; }
}

.tab {
    display: flex;
    flex-direction: column;
    gap: 1em;
}

/* Fullscreen */
main.fullscreen {
    max-width: none;
    margin: 0;
    padding: 0;

    & > .tabbar { display: none; }
    & .tab {
        box-sizing: border-box;
        height: calc(100vh - 2em);
    }
    & .tab > .summary { display: none; }
}

.popup {
    position: fixed;
    max-width: 90vw;
    padding: 1em;
    background: white;
    border-radius: 8px;
    box-shadow: 2px 2px rgba(136, 136, 136, 0.12);
    z-index: 999999;
}

button.confirm { --button_color: #2d8261; }
button.secondary { --button_color: var(--bar_color); }
button.secondary.active { color: white !important; }
button.insist {
    --button_color: #d33410 !important;
    --color: white;
    color: var(--color) !important;
    transition: --color 0.2s ease, background 0.2s ease, border-color 0.2s ease;
}
button.small { font-size: 0.7em; }
button.small > img {
    width: 12px;
    height: 12px;
}
button:is(.secondary, .small) { font-weight: normal !important; }

button.highlight { animation: highlight 1.4s ease-in-out infinite alternate; }
@keyframes highlight {
    0% {
        filter: contrast(100%);
        transform: scale(1);
    }
    100% {
        filter: contrast(120%);
        transform: scale(1.2);
    }
}

.shortcut {
    width: 16px;
    height: 16px;
    padding: 2px;
    background: var(--button_color);
    border-radius: 6px;
    vertical-align: middle;
}

#log {
    position: fixed;
    left: 50%;
    top: 1em;
    width: calc(100vw - 2em);
    max-width: 600px;
    z-index: 99999;
    user-select: none;
    -webkit-user-select: none;
    font-size: 15px;
    transform: translateX(-50%);
}

#log > div {
    margin-bottom: 8px;
    padding: 8px;
    background: #373737;
    color: white;
    border-radius: 20px;
    text-align: center;
    cursor: pointer;
}
@media (hover: hover) {
    #log > div:hover { filter: opacity(40%); }
}
#log > div.error { background: #ff6600; }
#log > div.success { background: #2d8261; }

/* Came from https://loading.io/css/ */
.log_spin {
    float: left;
    display: inline-block;
    box-sizing: border-box;
    width: 20px;
    height: 20px;
    margin: -1px 0 0 -1px;
}
.log_spin::after {
    content: ' ';
    display: block;
    width: 12px;
    height: 12px;
    margin: 1px;
    border-radius: 50%;
    border: 4px solid white;
    border-color: white transparent white transparent;
    animation: log_spin 0.8s ease-in-out infinite;
}
@keyframes log_spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

.bar {
    --fill: #383838;
    --empty: white;
    --rounding: 1px;

    width: 100%;
    height: 8px;
    display: flex;
    align-items: center;
    gap: 6px;

    & div {
        flex: 1;
        height: 100%;
        background: linear-gradient(to right, var(--fill) 0 calc(1% * var(--progress)),
                                              var(--empty) calc(1% * var(--progress)));
        border-radius: var(--rounding);
    }

    & span {
        font-size: 0.8em;
        text-align: left;
    }
}
.circle {
    --fill: #383838;
    --empty: color-mix(in srgb, var(--fill), white 80%);

    & circle:nth-child(1) { stroke: var(--empty); }
    & circle:nth-child(2) { stroke: var(--fill); }
}

.row {
    display: flex;
    gap: 1em;
    align-items: start;
}
.column {
    display: flex;
    flex-direction: column;
    gap: 1em;
}
.box {
    display: flex;
    flex-direction: column;
    padding: 1em;
    gap: 1em;
    background: var(--box_color);
    border-radius: 8px;
}
.box > .help { margin: 1em auto; }

.help {
    display: flex;
    width: 80%;
    max-width: 600px;
    gap: 1em;
    align-items: start;
    align-self: center;

    & > img {
        width: 200px;
        aspect-ratio: auto;
        z-index: 1;
        transform: translateX(-100px);
    }
    & > div {
        min-height: 100px;
        margin: 75px 0 0 -250px;
        padding: 1em 1em 1em 150px;
        background: white;
        border-radius: 8px;
    }

    &.right > div {
        margin: 75px -250px 0 0;
        padding: 1em 150px 1em 1em;
    }
    &.right > img { transform: translateX(100px); }
}

@media screen and (max-width: 960px) {
    .row {
        flex-direction: column;
        align-items: stretch;
    }

    .help {
        align-items: center;

        & > img { width: 100px; }
        & > div {
            min-height: 60px;
            margin-top: 20px;
        }
    }
    .help:not(.right) {
        margin-right: 0;

        & > div {
            margin-left: calc(-150px - 2em);
            padding-left: 75px;
        }
    }
    .help.right {
        margin-left: 0;

        & > div {
            margin-right: calc(-150px - 2em);
            padding-right: 75px;
        }
    }
}

.header {
    font-size: 1.2em;
    font-weight: bold;
    text-transform: uppercase;
    text-align: center;
    color: var(--top_color);
}
.safe {
    display: inline-block;
    vertical-align: middle;
    width: 24px;
    height: 24px;
    margin: 0 0.5em;
    background-color: #89b85a;
    background-image: url('../assets/ui/private.png');
    background-position: center;
    background-size: 16px 16px;
    background-repeat: no-repeat;
    border-radius: 50%;
    cursor: pointer;
}

.profile > .avatar {
    width: 192px;
    height: 192px;
    margin: 0 auto;
    border-width: 6px;
}

@media screen and (max-width: 960px) {
    .profile { width: auto; }
}
/* ... */

